# robar

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  aliases.js  index.html  rustfmt.toml  search-index.js  settings.html  source-files.js
examples/: rob.toml
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
robar/: all.html  index.html  struct.Error.html  type.Result.html
src/: client.rs  config.rs  display.rs  main.rs  server.rs
src/robar/: client.rs.html  config.rs.html  display.rs.html  main.rs.html  server.rs.html
