[package]
name = "robar"
version = "2.0.0"
authors = ["Jeffrey Xiao <jeffrey.xiao1998@gmail.com>"]
license =  "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://gitlab.com/jeffrey-xiao/robar-rs"
documentation = "https://docs.rs/robar"
description = """
A simple, but flexible system overlay bar for the X Window System (X11).
"""
categories = ["gui", "visualization"]
keywords = ["X11"]
include = ["src/**/*", "Cargo.toml"]
edition = "2018"

[badges]
travis-ci = { repository = "jeffrey-xiao/robar-rs", branch = "master" }

[dependencies]
bincode = "1.0"
clap = "2.32"
toml = "0.4"
serde_derive = "1.0"
serde = "1.0"

[dependencies.xcb]
version = "0.8"
features = ["randr"]
